--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
+iniconfig==2.0.0
+packaging==24.1
+pluggy==1.5.0
 pyasn1==0.6.1
 pysnmp==7.1.8
+pytest==8.3.3
+pytest-asyncio==0.24.0
 python-dotenv==1.0.1
