--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,25 @@
-iniconfig==2.0.0
+certifi==2024.8.30
+cffi==1.17.1
+charset-normalizer==3.4.0
+cryptography==43.0.3
+distlib==0.3.9
+filelock==3.16.1
+idna==3.10
+Jinja2==3.1.4
+MarkupSafe==3.0.2
 packaging==24.1
-pluggy==1.5.0
+pipenv==2024.3.1
+platformdirs==4.3.6
+ply==3.11
 pyasn1==0.6.1
+pycparser==2.22
+pycryptodomex==3.21.0
+pysmi==1.5.5
 pysnmp==7.1.8
-pytest==8.3.3
-pytest-asyncio==0.24.0
+pysnmpcrypto==0.0.4
 python-dotenv==1.0.1
+requests==2.32.3
+setuptools==75.3.0
+snmpsim==1.1.7
+urllib3==2.2.3
+virtualenv==20.27.1
