--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,9 @@
-# pytest.ini
 [pytest]
-testpaths = tests/*
-filterwarnings =
-    ignore::DeprecationWarning:pysnmp\.carrier\.asyncio\.dispatch
+testpaths = tests
+pythonpath = src src/client src/commands
+filterwarnings = ignore::DeprecationWarning:pysnmp\.carrier\.asyncio\.dispatch
+log_cli = true
+log_level=DEBUG
+log_format = %(asctime)s %(levelname)s %(message)s
+log_date_format = %Y-%m-%d %H:%M:%S
+log_file = logs/pytest-logs.txt
