chore: change to master branch

--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -31,10 +31,10 @@ name: Unit Tests
 on:
   push:
     branches:
-      - main
+      - master
   pull_request:
     branches:
-      - main
+      - master
   workflow_run:
     workflows: ["flake8-lint"]
     types:
