build: rebuild requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,60 @@
+asyncqt==0.8.0
+blinker==1.9.0
+boto3==1.35.70
+botocore==1.35.70
+build==1.2.2.post1
+cachetools==5.5.0
 certifi==2024.8.30
 cffi==1.17.1
 charset-normalizer==3.4.0
-cryptography==43.0.3
-distlib==0.3.9
-filelock==3.16.1
+click==8.1.7
+coverage==7.6.8
+cryptography==44.0.0
+dill==0.3.6
+dnslib==0.9.25
+dnspython==2.7.0
+ecdsa==0.19.0
+Flask==3.1.0
 idna==3.10
+iniconfig==2.0.0
+itsdangerous==2.2.0
 Jinja2==3.1.4
+jmespath==1.0.1
+localstack==4.0.2
+localstack-core==4.0.2
+localstack-ext==4.0.2
+markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+mdurl==0.1.2
 packaging==24.1
-pipenv==2024.3.1
-platformdirs==4.3.6
-ply==3.11
+pluggy==1.5.0
+plux==1.12.1
+psutil==6.1.0
+pyaes==1.6.1
 pyasn1==0.6.1
 pycparser==2.22
-pycryptodomex==3.21.0
-pysmi==1.5.5
+Pygments==2.18.0
+pyotp==2.9.0
+pyproject_hooks==1.2.0
+PySide6==6.8.0.2
+PySide6_Addons==6.8.0.2
+PySide6_Essentials==6.8.0.2
 pysnmp==7.1.8
-pysnmpcrypto==0.0.4
+pytest==8.3.3
+pytest-asyncio==0.24.0
+pytest-cov==6.0.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+python-jose==3.3.0
+PyYAML==6.0.2
 requests==2.32.3
-setuptools==75.3.0
-snmpsim==1.1.7
+rich==13.9.4
+rsa==4.9
+s3transfer==0.10.4
+semver==3.0.2
+shiboken6==6.8.0.2
+six==1.16.0
+tabulate==0.9.0
+tailer==0.4.1
 urllib3==2.2.3
-virtualenv==20.27.1
+Werkzeug==3.1.3
