--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -1,12 +1,6 @@
 name: Unit Tests
 
 on:
-  push:
-    branches:
-      - master
-  pull_request:
-    branches:
-      - master
   workflow_run:
     workflows: ["flake8-lint"]
     types:
@@ -27,8 +21,10 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip  # Upgrade pip to the latest version
-          pip install -r requirements.txt  # Install the dependencies from requirements.txt
+          sudo apt-get update
+          sudo apt-get install -y libegl1
+          python -m pip install --upgrade pip 
+          pip install -r requirements.tx
 
       - name: Run Tests
         run: |
