--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -24,7 +24,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y libegl1
           python -m pip install --upgrade pip 
-          pip install -r requirements.tx
+          pip install -r requirements.txt
 
       - name: Run Tests
         run: |
