build: add test .env

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,8 @@
 [pytest]
 testpaths = tests
 pythonpath = src src/client src/commands
+env_files =
+    .env.test
 filterwarnings = ignore::DeprecationWarning:pysnmp\.carrier\.asyncio\.dispatch
 log_cli = true
 log_level=DEBUG
