--- a/requirements.txt
+++ b/requirements.txt
@@ -43,6 +43,7 @@ pysnmp==7.1.8
 pytest==8.3.3
 pytest-asyncio==0.24.0
 pytest-cov==6.0.0
+pytest-dotenv==0.5.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-jose==3.3.0
