--- a/.github/workflows/flake8-lint.yml
+++ b/.github/workflows/flake8-lint.yml
@@ -9,8 +9,8 @@ on:
   workflow_dispatch:
 
 jobs:
-  lint:
-    name: flake8
+  install-dependencies:
+    name: install dependencies
     runs-on: ubuntu-latest
     steps:
       - name: Check out repo
@@ -20,7 +20,14 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.13"
-          cache: "pip"
+
+      - name: Cache pip dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
 
       - name: Update pip
         run: python -m pip install --upgrade pip
@@ -28,6 +35,11 @@ jobs:
       - name: Install flake8
         run: pip install flake8
 
+  run-lint:
+    name: flake8
+    runs-on: ubuntu-latest
+    needs: install-dependencies
+    steps:
       - name: Get changed Python files
         id: changed-files
         uses: tj-actions/changed-files@v41.0.0
