--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -7,8 +7,8 @@ on:
       - completed
 
 jobs:
-  install-and-test:
-    name: Install Dependencies and Run Tests
+  install-dependencies:
+    name: Install Dependencies
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository
@@ -26,6 +26,16 @@ jobs:
           python -m pip install --upgrade pip 
           pip install -r requirements.txt
 
+  run-unit-tests:
+    runs-on: ubuntu-latest
+    needs: install-dependencies
+    steps:
+      - name: Check out repository
+        uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.13"
       - name: Run Tests
         run: |
           pytest
