--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -11,7 +11,7 @@ jobs:
     name: Install Dependencies
     runs-on: ubuntu-latest
     steps:
-      - name: Check out repository
+      - name: Check Out Repository
         uses: actions/checkout@v4
 
       - name: Set up Python
@@ -19,7 +19,7 @@ jobs:
         with:
           python-version: "3.13"
 
-      - name: Install dependencies
+      - name: Install Dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y libegl1
@@ -30,7 +30,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: install-dependencies
     steps:
-      - name: Check out repository
+      - name: Check Out Repository
         uses: actions/checkout@v4
       - name: Set up Python
         uses: actions/setup-python@v4
