--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -7,11 +7,11 @@ on:
       - completed
 
 jobs:
-  install-dependencies:
-    name: Install Dependencies
+  install-and-test:
+    name: Install Dependencies and Run Tests
     runs-on: ubuntu-latest
     steps:
-      - name: Check Out Repository
+      - name: Check out repository
         uses: actions/checkout@v4
 
       - name: Set up Python
@@ -19,20 +19,10 @@ jobs:
         with:
           python-version: "3.13"
 
-      - name: Install Dependencies
+      - name: Install dependencies
         run: |
-          sudo apt-get update
-          sudo apt-get install -y libegl1
-          python -m pip install --upgrade pip 
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
-
-  run-unit-tests:
-    name: Run Unit Tests
-    runs-on: ubuntu-latest
-    needs: install-dependencies
-    steps:
-      - name: Check Out Repository
-        uses: actions/checkout@v4
 
       - name: Run Tests
         run: |
