--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -7,8 +7,8 @@ on:
       - completed
 
 jobs:
-  install-and-test:
-    name: Install Dependencies and Run Tests
+  install-dependencies:
+    name: Install Dependencies
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository
@@ -19,12 +19,31 @@ jobs:
         with:
           python-version: "3.13"
 
+      - name: Cache pip dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+
       - name: Install dependencies
         run: |
-          sudo apt-get update
-          sudo apt-get install -y libegl1
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+
+  run-unit-tests:
+    name: Run Unit Tests
+    runs-on: ubuntu-latest
+    needs: install-dependencies
+    steps:
+      - name: Check out repository
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.13"
 
       - name: Run Tests
         run: |
