--- a/.github/workflows/flake8-lint.yml
+++ b/.github/workflows/flake8-lint.yml
@@ -9,8 +9,8 @@ on:
   workflow_dispatch:
 
 jobs:
-  install-dependencies:
-    name: install dependencies
+  lint:
+    name: Lint Python Files
     runs-on: ubuntu-latest
     steps:
       - name: Check out repo
@@ -34,14 +34,6 @@ jobs:
 
       - name: Install flake8
         run: pip install flake8
-
-  run-lint:
-    name: flake8
-    runs-on: ubuntu-latest
-    needs: install-dependencies
-    steps:
-      - name: Check out repo
-        uses: actions/checkout@v4
 
       - name: Get changed Python files
         id: changed-files
